--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   shared_preferences: ^2.0.17
   theme_mode_handler: ^3.0.0
   google_fonts: ^4.0.1
+  persistent_bottom_nav_bar: ^5.0.2
+  loading_animation_widget: ^1.2.0+4
 
 dev_dependencies:
   flutter_test:
@@ -55,6 +57,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/
+    - assets/images/
+    - assets/fonts/
   fonts:
     - family: Questrial
       fonts:
