--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^4.0.1
   persistent_bottom_nav_bar: ^5.0.2
   loading_animation_widget: ^1.2.0+4
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
