--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   loading_animation_widget: ^1.2.0+4
   flutter_slidable: ^2.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
