--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   flutter_slidable: ^2.0.0
   intl: ^0.18.0
+  country: ^2.0.6
 
 dev_dependencies:
   flutter_test:
