--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_slidable: ^2.0.0
   intl: ^0.18.0
   country: ^2.0.6
+  carousel_slider: ^4.2.1
+  fl_chart: ^0.61.0
 
 dev_dependencies:
   flutter_test:
