--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   country: ^2.0.6
   carousel_slider: ^4.2.1
   fl_chart: ^0.61.0
+  flutter_quill: ^6.4.4
 
 dev_dependencies:
   flutter_test:
