--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   carousel_slider: ^4.2.1
   fl_chart: ^0.61.0
   flutter_quill: ^6.4.4
+  image_picker: ^0.8.7
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
