--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_quill: ^6.4.4
   image_picker: ^0.8.7
   url_launcher: ^6.1.10
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
