--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^0.8.7
   url_launcher: ^6.1.10
   flutter_colorpicker: ^1.0.3
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
