--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.17
+  shared_preferences: ^2.0.20
   theme_mode_handler: ^3.0.0
   google_fonts: ^4.0.1
   persistent_bottom_nav_bar: ^5.0.2
@@ -52,7 +52,11 @@ dependencies:
   shimmer: ^2.0.0
   search_page: ^2.3.0
   provider: ^6.0.5
-  firebase_core: ^2.8.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.2.2
+  cloud_firestore: ^4.5.0
+  cached_network_image: ^3.2.3
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
