--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   cloud_firestore: ^4.5.0
   cached_network_image: ^3.2.3
   fluttertoast: ^8.2.1
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
