--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   cached_network_image: ^3.2.3
   fluttertoast: ^8.2.1
   crypto: ^3.0.2
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
