Add network info and device info to user model

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   fluttertoast: ^8.2.1
   crypto: ^3.0.2
   permission_handler: ^10.2.0
+  network_info_plus: ^3.0.2
+  permission_handler_platform_interface: ^3.9.0
+  device_info_plus: ^8.1.0
 
 dev_dependencies:
   flutter_test:
