--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   network_info_plus: ^3.0.2
   permission_handler_platform_interface: ^3.9.0
   device_info_plus: ^8.1.0
+  firebase_storage: ^11.1.0
 
 dev_dependencies:
   flutter_test:
