--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   permission_handler_platform_interface: ^3.9.0
   device_info_plus: ^8.1.0
   firebase_storage: ^11.1.0
+  path: ^1.8.2
+  path_provider: ^2.0.14
 
 dev_dependencies:
   flutter_test:
