--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   firebase_storage: ^11.1.0
   path: ^1.8.2
   path_provider: ^2.0.14
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
