--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,18 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "flutter_base",
+            "name": "news_app",
             "request": "launch",
             "type": "dart"
         },
         {
-            "name": "flutter_base (profile mode)",
+            "name": "news_app (profile mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "profile"
         },
         {
-            "name": "flutter_base (release mode)",
+            "name": "news_app (release mode)",
             "request": "launch",
             "type": "dart",
             "flutterMode": "release"
