--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_base">
+    package="com.example.news_app">
    <application
-        android:label="flutter_base"
+        android:label="news_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
