--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.14
   http: ^0.13.5
+  flutter_native_splash: ^2.2.19
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
