--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_native_splash: ^2.2.19
 
 dev_dependencies:
+  flutter_oss_licenses: ^2.0.1
   flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
@@ -82,20 +83,20 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/default_logo_favicon.png"
+  image_path: "assets/images/logo_favicon.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/images/default_logo_favicon.png"
+    image_path: "assets/images/logo_favicon.png"
     background_color: "#FFFFFF"
     theme_color: "#FFFFFF"
   windows:
     generate: true
-    image_path: "assets/images/default_logo_favicon.png"
+    image_path: "assets/images/logo_favicon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/images/default_logo_favicon.png"
+    image_path: "assets/images/logo_favicon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
