--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:584480622587:ios:f199a1b8bcc1795f906d5e",
-  "FIREBASE_PROJECT_ID": "news-app-f23dc",
-  "GCM_SENDER_ID": "584480622587"
+  "GOOGLE_APP_ID": "1:17138422201:ios:8f4e7a6069bbe40efb6668",
+  "FIREBASE_PROJECT_ID": "news-app-v2-e2716",
+  "GCM_SENDER_ID": "17138422201"
 }
