--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   textfield_tags: ^2.0.2
   dotted_line: ^3.1.0
   flutter_svg: ^2.0.5
+  google_sign_in: ^6.1.0
 
 dev_dependencies:
   flutter_oss_licenses: ^2.0.1
