--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .svn/
 migrate_working_dir/
 
+/.TODO.md
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -42,5 +44,3 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-
-/TODO.md
