--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -1,7 +1,7 @@
 flutter_native_splash:
   image: assets/images/logo.png
   color: "#FFFFFF"
-  color_dark: "#1C1243"
+  color_dark: "#FFFFFF"
   android: true
   ios: true
   web: true
